RC-4844 new authentication flow with user token and redpen token  (#8)

--- a/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-isRedpenPluginEnabled.html
+++ b/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-isRedpenPluginEnabled.html
@@ -1,3 +1,4 @@
 <div>
-    Redpen Plugin allow you to Get Build logs and Specified log dir, also build status on your Jira Issue Comment.
+    Redpen Plugin helps in reporting the pipeline failures to Jira tickets.
+    The Jenkins pipeline trigged (e.g. by a GitHub branch) when fails, the Redpen plugin will add the failure summary, attach pipeline logs as comments to the Jira ticket. Important: The GitHub branch that triggers Jenkins pipeline should have the Jira ticket number in the branch name.
 </div>
