--- a/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-redpenPlugin.html
+++ b/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-redpenPlugin.html
@@ -1,4 +1,4 @@
 <div>
-    Redpen Plugin Helps You to Add Comment on Every build with Build log (if Build not Succeed) and build result on your
-    Jira issue number Specified in GitHub branch name
+    Redpen Plugin helps in reporting the pipeline failures to Jira tickets.
+    The Jenkins pipeline trigged (e.g. by a GitHub branch) when fails, the Redpen plugin will add the failure summary, attach pipeline logs as comments to the Jira ticket. Important: The GitHub branch that triggers Jenkins pipeline should have the Jira ticket number in the branch name.
 </div>
