--- a/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-logFileLocation.html
+++ b/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-logFileLocation.html
@@ -1,3 +1,3 @@
 <div>
-    Path To Upload file from workspace, [Note: You can add multiple path separate by comma(',')] i.e. '/logs, resource/content.xml'
+    Add absolute paths (comma separated) of your Jenkins server workspace. Redpen plugin will fetch all the files from those paths and attaches in the comment of the Jira ticket. [e.g. '/logs, /resource/content.xml']
 </div>
