RJP-5 Add New Content in Redpen Jenkins Plugin (#10)

--- a/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-logFileLocation.html
+++ b/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-logFileLocation.html
@@ -1,3 +1,4 @@
 <div>
-    Add absolute paths (comma separated) of your Jenkins server workspace. Redpen plugin will fetch all the files from those paths and attaches in the comment of the Jira ticket. [e.g. '/logs, /resource/content.xml']
+    Add absolute paths (comma separated) of your Jenkins server workspace. Redpen plugin will fetch and attach all the
+    files from the specified paths to the comment of the Jira ticket.
 </div>
