--- a/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-redpenPlugin.html
+++ b/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-redpenPlugin.html
@@ -1,4 +1,20 @@
 <div>
-    Redpen Plugin helps in reporting the pipeline failures to Jira tickets.
-    The Jenkins pipeline trigged (e.g. by a GitHub branch) when fails, the Redpen plugin will add the failure summary, attach pipeline logs as comments to the Jira ticket. Important: The GitHub branch that triggers Jenkins pipeline should have the Jira ticket number in the branch name.
+    <p>
+        The Redpen Jenkins plugin provides an easy, and secure way to connect and send build and deployment
+        information from your Jenkins server to your Jira sites. The pipeline reports the build and deployment status
+        (failure or success) with other meaningful data directly into the Jira issues which helps your team to track and
+        collaborate.
+    </p>
+    <p>
+        This plugin gives visibility to your team of the CI/CD pipelines related to Jira issues. The plugin adds the
+        build and deployment related data as Jira issue comments. So, it is <strong>important</strong> that the branch
+        that triggers the Jenkins pipeline must have the Jira ticket number in the branch name. (e.g. [TEST-1234] Deploy
+        v1.2 sto production)
+    </p>
+    <p>
+        The plugin in powered by <a
+            href="https://www.redpen.ai/?utm_source=jenkins_plugin&utm_medium=application&utm_campaign=integration"
+            target="_blank">Redpen</a>.
+    </p>
+
 </div>
