RJP-5: Update Content

--- a/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-redpenPlugin.html
+++ b/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-redpenPlugin.html
@@ -8,7 +8,8 @@
     <p>
         This plugin gives visibility to your team of the CI/CD pipelines related to Jira issues. The plugin adds the
         build and deployment related data as Jira issue comments. So, it is <strong>important</strong> that the branch
-        that triggers the Jenkins pipeline must have the Jira ticket number in the branch name. (e.g. [TEST-1234] Deploy
+        that triggers the Jenkins pipeline <strong> must have the Jira ticket number in the branch name.</strong> (e.g.
+        [TEST-1234] Deploy
         v1.2 sto production)
     </p>
     <p>
