--- a/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-redpenPlugin.html
+++ b/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-redpenPlugin.html
@@ -1,9 +1,8 @@
 <div>
     <p>
-        The Redpen Jenkins plugin provides an easy, and secure way to connect and send build and deployment
-        information from your Jenkins server to your Jira sites. The pipeline reports the build and deployment status
-        (failure or success) with other meaningful data directly into the Jira issues which helps your team to track and
-        collaborate.
+        The Redpen Jenkins plugin provides an easy and secure way to send the information of failure build from Jenkins
+        server to your Jira sites. The pipeline reports the failure status of the build and deployment with meaningful
+        data directly into the Jira issues which helps your team to track and collaborate.
     </p>
     <p>
         This plugin gives visibility to your team of the CI/CD pipelines related to Jira issues. The plugin adds the
